kibana/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: dev
spec:
  type: ClusterIP
  # type: LoadBalancer
  selector:
    app.kubernetes.io/instance: kibana
  ports:
  - port: 5601
    targetPort: 5601
